src/test/ui/issues/issue-2151.rs
fn main() {
    let x = panic!();
    x.clone(); //~ ERROR type annotations needed
}
